--- a/layout-parts/q1/index.html
+++ b/layout-parts/q1/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="format-detection" content="telephone=no">
-    <title>基本レイアウト・パーツ</title>
-    <link rel="stylesheet" href="http://gizumo-inc.github.io/sample/front-lesson/layout-parts/assets/css/reset.css">
-    <link rel="stylesheet" href="http://gizumo-inc.github.io/sample/front-lesson/layout-parts/assets/css/base.css">
-    <link rel="stylesheet" href="../assets/css/base.css">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <title>基本レイアウト・パーツ</title>
+  <link rel="stylesheet" href="http://gizumo-inc.github.io/sample/front-lesson/layout-parts/assets/css/reset.css">
+  <link rel="stylesheet" href="http://gizumo-inc.github.io/sample/front-lesson/layout-parts/assets/css/base.css">
+  <link rel="stylesheet" href="../assets/css/base.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-<div class="wrapper">
+  <div class="wrapper">
     <h1 class="title">基本レイアウト・パーツ</h1>
 
     <div class="box">
-        <h2 class="headline">
-            <p class="headline__txt">Q1. ボックスモデル</p>
+      <h2 class="headline">
+        <p class="headline__txt">Q1. ボックスモデル</p>
         </h2>
         <!--
         githubのボックスモデルについての説明は読みましたか。読んでない場合は先に読んでください。
@@ -34,10 +33,60 @@
         ・border
         ・float
         -->
-        <!-- 回答はここに書いてね -->
-
-        <!-- 回答はここに書いてね -->
-    </div>
+       
+    </div> 
+    <main>
+      <ul class="main__list clearfix">
+        <li>
+          <div class="text-box">
+            <p class="text-style">
+                Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis auto irure dolor in
+                reqrehenderit in voluptate velit esse cillum
+                dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui
+                offica deserunt mollit anim id est laborum.
+            </p>
+          </div>
+        </li>
+        <li>
+          <div class="text-box">
+            <p class="text-style">
+                Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis auto irure dolor in
+                reqrehenderit in voluptate velit esse cillum
+                dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui
+                offica deserunt mollit anim id est laborum.
+            </p>
+          </div>
+        </li>
+        <li>
+          <div class="text-box">
+            <p class="text-style">
+                Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis auto irure dolor in
+                reqrehenderit in voluptate velit esse cillum
+                dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui
+                offica deserunt mollit anim id est laborum.
+            </p>
+          </div>
+        </li>
+      </ul>
+    </main>
 </div>
 
 </body>
