--- a/layout-parts/q2/index.html
+++ b/layout-parts/q2/index.html
@@ -36,6 +36,22 @@
         <!-- 回答はここに書いてね -->
 
         <!-- 回答はここに書いてね -->
+        <main>
+            <p>
+                <img src="http://gizumo-inc.github.io/sample/front-lesson/layout-parts/assets/img/q2/thumb_1.jpg" class="fuusen">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu nt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio n ullamco laboris nisi ut aliquip ex ea commobo consequat. Duis aute irure dolor in repr ehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint oc caecat cupidatat nonproident, sunt in culpa qui officia deserunt mollit anim id est lador um.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu nt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu ip ex ea commobo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nu lla pariatur. Excepteur sint oc caecat cupidatat nonproident, sunt in culpa qui officia deserunt mollit anim id est lador um.
+            </p>
+            <p>
+                <img src="http://gizumo-inc.github.io/sample/front-lesson/layout-parts/assets/img/q2/thumb_2.jpg" class="tyoutin">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu nt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio n ullamco laboris nisi ut aliquip ex ea commobo consequat. Duis aute irure dolor in repr ehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint oc caecat cupidatat nonproident, sunt in culpa qui officia deserunt mollit anim id est lador um.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididu nt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliqu ip ex ea commobo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nu lla pariatur. Excepteur sint oc caecat cupidatat nonproident, sunt in culpa qui officia deserunt mollit anim id est lador um.
+            </p>
+        </main>
     </div>
 </div>
 
