--- a/layout-parts/q5/index.html
+++ b/layout-parts/q5/index.html
@@ -39,9 +39,9 @@
                 ・display
                 ・text-align
                 -->
+                <div class="center">
                 <!-- Q5-1の回答はここに書いてね -->
-                <div>
-                    <p>text-align</p>
+                    <p class="text-align">text-align</p>
                 </div>
                 <!-- Q5-1の回答はここに書いてね -->
             </div>
@@ -51,7 +51,7 @@
                 ・margin
                 -->
                 <!-- Q5-1の回答はここに書いてね -->
-                <p>margin</p>
+                <p class="margin0">margin</p>
                 <!-- Q5-1の回答はここに書いてね -->
             </div>
         </div>
@@ -90,8 +90,8 @@
         ・justify-content
         -->
         <!-- Q5-2の回答はここに書いてね -->
-        <div class="q5__box">
-            <p>flex</p>
+        <div class="q5__box flex">
+            <p class="text">flex</p>
         </div>
         <!-- Q5-2の回答はここに書いてね -->
 
