--- a/layout-parts/q6/index.html
+++ b/layout-parts/q6/index.html
@@ -30,24 +30,24 @@
         <div class="q6">
             <p class="title--sub">ー small ー</p>
 
-            <div>common</div>
-            <div>error</div>
-            <div>disabled</div>
-            <div>shadow</div>
+            <div class="common small">common</div>
+            <div class="error small">error</div>
+            <div class="disabled small">disabled</div>
+            <div class="shadow small">shadow</div>
 
             <p class="title--sub mt10">ー middle ー</p>
 
-            <div>common</div>
-            <div>error</div>
-            <div>disabled</div>
-            <div>shadow</div>
+            <div class="common middle">common</div>
+            <div class="error middle">error</div>
+            <div class="disabled middle">disabled</div>
+            <div class="shadow middle">shadow</div>
 
             <p class="title--sub mt10">ー large ー</p>
 
-            <div>common</div>
-            <div>error</div>
-            <div>disabled</div>
-            <div>shadow</div>
+            <div class="common large">common</div>
+            <div class="error large">error</div>
+            <div class="disabled large">disabled</div>
+            <div class="shadow large">shadow</div>
         </div>
         <!-- 回答はここに書いてね -->
     </div>
