--- a/layout-parts/q8/index.html
+++ b/layout-parts/q8/index.html
@@ -34,15 +34,15 @@
         ・display: table-cell
         -->
         <!-- 回答はここに書いてね -->
-        <div class="q8">
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q8 table">
+            <div class="box1-1">固定</div>
+            <div class="box1-2">可変</div>
+            <div class="box1-3">固定</div>
         </div>
-        <div class="q8">
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+        <div class="q8 table">
+            <div class="box2-1">可変</div>
+            <div class="box2-2">可変</div>
+            <div class="box2-3">固定</div>
         </div>
         <!-- 回答はここに書いてね -->
     </div>
