--- a/layout-parts/q7/index.html
+++ b/layout-parts/q7/index.html
@@ -48,7 +48,48 @@
         ・:after
         -->
         <!-- 回答はここに書いてね -->
+        <div class="q7">
+            <div class="q7-box">
+                <input class="q7-text q7-init" type="text"
+                placeholder="input=&quot;text&quot;">
+        </div>
 
+        <div class="q7-box">
+            <textarea class="q7-textarea q7-init" type="text"
+            placeholder="textarea(サイズ固定）"></textarea>
+        </div>
+
+        <div class="q7-box">
+            <label class="q7-radio">
+                <input class="q7-radio-btn" type="radio" name="q7">
+                <span class="q7-radio-text">radio1</span>
+            </label>
+            <label class="q7-radio">
+                <input class="q7-radio-btn" type="radio" name="q7">
+                <span class="q7-radio-text">radio2</span>
+            </label>
+        </div>
+
+        <div class="q7-box">
+            <label class="q7-check">
+                <input class="q7-check-btn" type="checkbox">
+                <span class="q7-check-text">checkbox</span>
+            </label>
+        </div>
+
+        <div class="q7-box">
+            <div class="q7-select">
+                <select class="q7-select-item q7-init">
+                    <option>select1</option>
+                    <option>select2</option>
+                    <option>select3</option>
+                </select>
+            </div>
+        </div>
+
+        <div class="q7-box">
+            <button class="q7-btn q7-init">button</button>
+        </div>
         <!-- 回答はここに書いてね -->
     </div>
 </div>
