--- a/layout-parts/q9/index.html
+++ b/layout-parts/q9/index.html
@@ -36,50 +36,50 @@
         今回もHTMLは記述してあるので、新たにclassを付与してスタイルをあててください。
         -->
         <!-- 回答はここに書いてね -->
-        <div>
-            <div>
-                <div><div>12</div></div>
+        <div class="container">
+            <div class="item">
+                <div class="box1"><div class="center">12</div></div>
             </div>
-            <div>
-                <div><div>6</div></div>
-                <div><div>6</div></div>
+            <div class="item">
+                <div class="gridbox box2"><div class="center">6</div></div>
+                <div class="gridbox box2"><div class="center">6</div></div>
             </div>
-            <div>
-                <div><div>4</div></div>
-                <div><div>4</div></div>
-                <div><div>4</div></div>
+            <div class="item">
+                <div class="gridbox box3"><div class="center">4</div></div>
+                <div class="gridbox box3"><div class="center">4</div></div>
+                <div class="gridbox box3"><div class="center">4</div></div>
             </div>
-            <div>
-                <div><div>3</div></div>
-                <div><div>3</div></div>
-                <div><div>3</div></div>
-                <div><div>3</div></div>
+            <div class="item">
+                <div class="gridbox box4"><div class="center">3</div></div>
+                <div class="gridbox box4"><div class="center">3</div></div>
+                <div class="gridbox box4"><div class="center">3</div></div>
+                <div class="gridbox box4"><div class="center">3</div></div>
             </div>
-            <div>
-                <div><div>2.4</div></div>
-                <div><div>2.4</div></div>
-                <div><div>2.4</div></div>
-                <div><div>2.4</div></div>
-                <div><div>2.4</div></div>
+            <div class="item">
+                <div class="gridbox box5"><div class="center">2.4</div></div>
+                <div class="gridbox box5"><div class="center">2.4</div></div>
+                <div class="gridbox box5"><div class="center">2.4</div></div>
+                <div class="gridbox box5"><div class="center">2.4</div></div>
+                <div class="gridbox box5"><div class="center">2.4</div></div>
             </div>
-            <div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
+            <div class="item">
+                <div class="gridbox box6"><div class="center">2</div></div>
+                <div class="gridbox box6"><div class="center">2</div></div>
+                <div class="gridbox box6"><div class="center">2</div></div>
+                <div class="gridbox box6"><div class="center">2</div></div>
+                <div class="gridbox box6"><div class="center">2</div></div>
+                <div class="gridbox box6"><div class="center">2</div></div>
+            </div >
+            <div class="item">
+                <div class="gridbox box2"><div class="center">6</div></div>
+                <div class="gridbox box4"><div class="center">3</div></div>
+                <div class="gridbox box4"><div class="center">3</div></div>
             </div>
-            <div>
-                <div><div>6</div></div>
-                <div><div>3</div></div>
-                <div><div>3</div></div>
-            </div>
-            <div>
-                <div><div>2</div></div>
-                <div><div>2</div></div>
-                <div><div>4</div></div>
-                <div><div>4</div></div>
+            <div class="item">
+                <div class="gridbox box6"><div class="center">2</div></div>
+                <div class="gridbox box6"><div class="center">2</div></div>
+                <div class="gridbox box3"><div class="center">4</div></div>
+                <div class="gridbox box3"><div class="center">4</div></div>
             </div>
         </div>
         <!-- 回答はここに書いてね -->
