--- a/layout-parts/q11/index.html
+++ b/layout-parts/q11/index.html
@@ -41,7 +41,14 @@
         ・:hover
         -->
         <!-- 回答はここに書いてね -->
-
+        <div class="image-box">
+        <img src="http://gizumo-inc.github.io/sample/front-lesson/layout-parts/assets/img/q11/thumb.jpg" alt="" />
+          <div class="screan">
+            <div class="text-box">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis auto irure dolor in reqrehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui offica deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </div>
         <!-- 回答はここに書いてね -->
 
         <p class="title--sub mt10">ー animation ー</p>
@@ -55,7 +62,7 @@
         ・transform
         -->
         <!-- 回答はここに書いてね -->
-
+　　      <div class="loader"></div>
         <!-- 回答はここに書いてね -->
     </div>
 </div>
