--- a/layout-parts/q12/index.html
+++ b/layout-parts/q12/index.html
@@ -33,7 +33,20 @@
         ・:after
         -->
         <!-- 回答はここに書いてね -->
-
+        <div class="fukidashi">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur
+                adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud
+                exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis auto irure dolor in
+                reqrehenderit in voluptate velit esse cillum
+                dolore eu fugiat nulla pariatur. Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui
+                offica deserunt mollit anim id est laborum.
+            </p>
+        </div>
         <!-- 回答はここに書いてね -->
     </div>
 </div>
