レビュー後訂正

--- a/layout-parts/q12/index.html
+++ b/layout-parts/q12/index.html
@@ -33,7 +33,7 @@
         ・:after
         -->
         <!-- 回答はここに書いてね -->
-        <div class="fukidashi">
+        <div class="text-baloon">
             <p>
                 Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit, sed do eiusmod tempor
