--- a/layout-parts/q3/index.html
+++ b/layout-parts/q3/index.html
@@ -37,7 +37,7 @@
         ■必須ではないけど使えると便利な擬似要素
         ・:not
         -->
-        <table>
+        <table class="cal-table">
             <tr>
                 <th>日付</th>
                 <th>朝ごはん</th>
