--- a/layout-parts/q9/index.html
+++ b/layout-parts/q9/index.html
@@ -37,32 +37,32 @@
         -->
         <!-- 回答はここに書いてね -->
         <div class="container">
-            <div class="item">
+            <div class="item clearfix">
                 <div class="box1"><div class="center">12</div></div>
             </div>
-            <div class="item">
+            <div class="item clearfix">
                 <div class="gridbox box2"><div class="center">6</div></div>
                 <div class="gridbox box2"><div class="center">6</div></div>
             </div>
-            <div class="item">
+            <div class="item clearfix">
                 <div class="gridbox box3"><div class="center">4</div></div>
                 <div class="gridbox box3"><div class="center">4</div></div>
                 <div class="gridbox box3"><div class="center">4</div></div>
             </div>
-            <div class="item">
+            <div class="item clearfix">
                 <div class="gridbox box4"><div class="center">3</div></div>
                 <div class="gridbox box4"><div class="center">3</div></div>
                 <div class="gridbox box4"><div class="center">3</div></div>
                 <div class="gridbox box4"><div class="center">3</div></div>
             </div>
-            <div class="item">
+            <div class="item clearfix">
                 <div class="gridbox box5"><div class="center">2.4</div></div>
                 <div class="gridbox box5"><div class="center">2.4</div></div>
                 <div class="gridbox box5"><div class="center">2.4</div></div>
                 <div class="gridbox box5"><div class="center">2.4</div></div>
                 <div class="gridbox box5"><div class="center">2.4</div></div>
             </div>
-            <div class="item">
+            <div class="item clearfix">
                 <div class="gridbox box6"><div class="center">2</div></div>
                 <div class="gridbox box6"><div class="center">2</div></div>
                 <div class="gridbox box6"><div class="center">2</div></div>
@@ -70,12 +70,12 @@
                 <div class="gridbox box6"><div class="center">2</div></div>
                 <div class="gridbox box6"><div class="center">2</div></div>
             </div >
-            <div class="item">
+            <div class="item clearfix">
                 <div class="gridbox box2"><div class="center">6</div></div>
                 <div class="gridbox box4"><div class="center">3</div></div>
                 <div class="gridbox box4"><div class="center">3</div></div>
             </div>
-            <div class="item">
+            <div class="item clearfix">
                 <div class="gridbox box6"><div class="center">2</div></div>
                 <div class="gridbox box6"><div class="center">2</div></div>
                 <div class="gridbox box3"><div class="center">4</div></div>
