--- a/layout-parts/q4/index.html
+++ b/layout-parts/q4/index.html
@@ -37,15 +37,15 @@
         -->
         <!-- 回答はここに書いてね -->
         <div class="main-box">
-            <div class="box8">8</div>
-            <div class="box5">5</div>
-            <div class="box1">1</div>
-            <div class="box7">7</div>
-            <div class="box4">4</div>
-            <div class="box6">6</div>
-            <div class="box2">2</div>
-            <div class="box3">3</div>
-            <div class="box9">9</div>
+            <div class="box8 boxlayout">8</div>
+            <div class="box5 boxlayout">5</div>
+            <div class="box1 boxlayout">1</div>
+            <div class="box7 boxlayout">7</div>
+            <div class="box4 boxlayout">4</div>
+            <div class="box6 boxlayout">6</div>
+            <div class="box2 boxlayout">2</div>
+            <div class="box3 boxlayout">3</div>
+            <div class="box9 boxlayout">9</div>
         </div>
         <!-- 回答はここに書いてね -->
     </div>
