--- a/layout-parts/q8/index.html
+++ b/layout-parts/q8/index.html
@@ -35,14 +35,14 @@
         -->
         <!-- 回答はここに書いてね -->
         <div class="q8 table">
-            <div class="box1-1">固定</div>
-            <div class="box1-2">可変</div>
-            <div class="box1-3">固定</div>
+            <div class="boxlayout is-pink">固定</div>
+            <div class="boxlayout is-purple">可変</div>
+            <div class="boxlayout is-blue">固定</div>
         </div>
         <div class="q8 table">
-            <div class="box2-1">可変</div>
-            <div class="box2-2">可変</div>
-            <div class="box2-3">固定</div>
+            <div class="boxlayout is-orange">可変</div>
+            <div class="boxlayout is-yellow">可変</div>
+            <div class="boxlayout is-green">固定</div>
         </div>
         <!-- 回答はここに書いてね -->
     </div>
