レビュー後再訂正

--- a/layout-parts/q1/index.html
+++ b/layout-parts/q1/index.html
@@ -38,8 +38,7 @@
     <main>
       <ul class="main__list clearfix">
         <li>
-          <div class="text-box">
-            <p>
+          <p class="text-box">
                 Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut
@@ -50,12 +49,10 @@
                 dolore eu fugiat nulla pariatur. Excepteur sint
                 occaecat cupidatat non proident, sunt in culpa qui
                 offica deserunt mollit anim id est laborum.
-            </p>
-          </div>
+          </p>
         </li>
         <li>
-          <div class="text-box">
-            <p>
+            <p class="text-box">
                 Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut
@@ -67,11 +64,9 @@
                 occaecat cupidatat non proident, sunt in culpa qui
                 offica deserunt mollit anim id est laborum.
             </p>
-          </div>
         </li>
         <li>
-          <div class="text-box">
-            <p>
+            <p class="text-box">
                 Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut
@@ -83,7 +78,6 @@
                 occaecat cupidatat non proident, sunt in culpa qui
                 offica deserunt mollit anim id est laborum.
             </p>
-          </div>
         </li>
       </ul>
     </main>
