--- a/layout-parts/q12/index.html
+++ b/layout-parts/q12/index.html
@@ -33,8 +33,7 @@
         ・:after
         -->
         <!-- 回答はここに書いてね -->
-        <div class="text-baloon">
-            <p>
+            <p class="text-baloon">
                 Lorem ipsum dolor sit amet, consectetur
                 adipiscing elit, sed do eiusmod tempor
                 incididunt ut labore et dolore magna aliqua. Ut
@@ -46,7 +45,6 @@
                 occaecat cupidatat non proident, sunt in culpa qui
                 offica deserunt mollit anim id est laborum.
             </p>
-        </div>
         <!-- 回答はここに書いてね -->
     </div>
 </div>
